--- a/friends.html
+++ b/friends.html
@@ -24,6 +24,22 @@
         <!-- Lightning Icon -->
       </div>
     </div>
+
+    <header class="screen__header">
+      <h1 class="screen__header__title">Friends</h1>
+      <div class="screen__header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-cog fa-lg"></i></span>
+      </div>
+    </header>
+    <div class="div"></div>
+    <a id="friend-display-link">
+      <i class="fas fa-info-circle fa-lg"></i>
+      Friends'Names Display
+      <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
