--- a/friends.html
+++ b/friends.html
@@ -35,10 +35,28 @@
     </header>
     <div class="div"></div>
     <a id="friend-display-link">
-      <i class="fas fa-info-circle fa-lg"></i>
+      <i class="fas fa-info-circle fa-lg"> </i>
       Friends'Names Display
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
+    <main class="friends-screen">   
+      <div class="user-component">
+      <div class="user-component__column">
+        <img src="https://lh3.googleusercontent.com/ogw/AOh-ky1QPpl3TwFGxj_jgtlBgWI4ApoTYm8bnfQhdMJT=s32-c-mo" 
+        class="user-component__avatar user-component__avata--xl" />
+        <div class="user-component__text">
+          <h4 class="user-component__title">DongHae </h4>
+          <!--<h6 class="user-component__subtitle">this text whatever</h6> -->
+        </div>
+      </div>
+      <div class="user-component__column">
+      </div>
+      <div class="friends-screen__channel">
+<div class="friends-screen__channel-header">
+  <span class="channel">Channel</span> <i class="fas fa-chevron-right fa-xs"></i>
+</div>
+      </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
