--- a/chats.html
+++ b/chats.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friedns - Kokoa Talk</title>
+    <title>Chats - Kokoa Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -26,54 +26,33 @@
     </div>
 
     <header class="screen__header">
-      <h1 class="screen__header__title">Friends</h1>
+      <h1 class="screen__header__title">Chats</h1>
       <div class="screen__header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
       </div>
     </header>
     <div class="div"></div>
-    <a id="friend-display-link">
-      <i class="fas fa-info-circle fa-lg"> </i>
-      Friends'Names Display
-      <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-    <main class="friends-screen">
+
+    <main class="main-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
             src="https://lh3.googleusercontent.com/ogw/AOh-ky1QPpl3TwFGxj_jgtlBgWI4ApoTYm8bnfQhdMJT=s32-c-mo"
-            class="user-component__avatar user-component__avata--xl"
+            class="user-component__avatar user-component__avata--sm"
           />
           <div class="user-component__text">
             <h4 class="user-component__title">DongHae</h4>
-            <!--<h6 class="user-component__subtitle">this text whatever</h6> -->
+            <h6 class="user-component__subtitle">
+              Please check My Kakao Account Info
+            </h6>
           </div>
         </div>
-        <div class="user-component__column"></div>
-      </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-          <div class="user-component__colum2">
-            <img
-              src="https://lh3.googleusercontent.com/ogw/AOh-ky1QPpl3TwFGxj_jgtlBgWI4ApoTYm8bnfQhdMJT=s32-c-mo"
-              class="user-component__avatar user-component__avata--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Channel
-              </h4>
-              <!--<h6 class="user-component__subtitle">this text whatever</h6> -->
-            </div>
-          </div>
-          <div class="user-component__column3">
-            <span>2</span><i class="fas fa-chevron-right fa-xs"></i>
-          </div>
+        <div class="user-component__column">
+          <span class="user-component__time">21:22</span>
+          <div class="badge">1</div>
         </div>
       </div>
     </main>
@@ -82,13 +61,13 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fas fa-user fa-2x"></i>
+            ><i class="far fa-user fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="far fa-comment fa-2x"></i>
+            <i class="fas fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
