--- a/find.html
+++ b/find.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friedns - Kokoa Talk</title>
+    <title>Find - Kokoa Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -26,63 +26,42 @@
     </div>
 
     <header class="screen__header">
-      <h1 class="screen__header__title">Friends</h1>
+      <h1 class="screen__header__title">Find</h1>
       <div class="screen__header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
       </div>
+      <div class="find__dot"></div>
     </header>
-    <div class="div"></div>
-    <a id="friend-display-link">
-      <i class="fas fa-info-circle fa-lg"> </i>
-      Friends'Names Display
-      <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-    <main class="friends-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://lh3.googleusercontent.com/ogw/AOh-ky1QPpl3TwFGxj_jgtlBgWI4ApoTYm8bnfQhdMJT=s32-c-mo"
-            class="user-component__avatar user-component__avata--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">DongHae</h4>
-            <!--<h6 class="user-component__subtitle">this text whatever</h6> -->
-          </div>
+    <main class="main-screen2">
+      <div class="find-icons">
+        <div class="find-icons__icon">
+          <i class="fas fa-qrcode"></i>
+          <span>QR code</span>
         </div>
-        <div class="user-component__column"></div>
+        <div class="find-icons__icon">
+          <i class="far fa-address-book"></i>
+          <span>Add by Contacts</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fas fa-fingerprint"></i>
+          <span>Add by ID</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="far fa-envelope-open"></i>
+          <span>Invite</span>
+        </div>
       </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-          <div class="user-component__colum2">
-            <img
-              src="https://lh3.googleusercontent.com/ogw/AOh-ky1QPpl3TwFGxj_jgtlBgWI4ApoTYm8bnfQhdMJT=s32-c-mo"
-              class="user-component__avatar user-component__avata--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Channel
-              </h4>
-              <!--<h6 class="user-component__subtitle">this text whatever</h6> -->
-            </div>
-          </div>
-          <div class="user-component__column3">
-            <span>2</span><i class="fas fa-chevron-right fa-xs"></i>
-          </div>
-        </div>
+      <div class="recommended-friends">
+        <h6 class="recommended-friends__title">Recommended Friends</h6>
+        <span>You have no recommended friends.</span>
       </div>
     </main>
-
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fas fa-user fa-2x"></i>
+            ><i class="far fa-user fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
