--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find - Kokoa Talk</title>
+    <title>More - Kokoa Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -26,69 +26,76 @@
     </div>
 
     <header class="screen__header">
-      <h1 class="screen__header__title">Find</h1>
+      <h1 class="screen__header__title">More</h1>
       <div class="screen__header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span
+          ><a href="setting.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
       </div>
       <div class="find__dot"></div>
     </header>
-    <main class="main-screen2">
+    <main class="main-screen2 more-screen">
+      <div class="user-component">
+        <div class="user-component__column__more">
+          <img
+            src="https://lh3.googleusercontent.com/ogw/AOh-ky1QPpl3TwFGxj_jgtlBgWI4ApoTYm8bnfQhdMJT=s32-c-mo"
+            class="user-component__avatar user-component__avata--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">DongHae</h4>
+            <h6 class="user-component__subtitle">
+              010 3080 6331
+              <i class="fas fa-exclamation-circle fa-sm alert__more"></i>
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column__more">
+          <i class="far fa-comment-alt fa-2x"></i>
+        </div>
+      </div>
       <div class="icon-row">
         <div class="icon-row__icon">
-          <i class="fas fa-qrcode"></i>
-          <span>QR code</span>
+          <i class="far fa-calendar"></i>
+          <span>Calendar</span>
+          <div class="open-chat__more"><i class="fas fa-comments"></i></div>
+          <span>Open chats</span>
         </div>
         <div class="icon-row__icon">
-          <i class="far fa-address-book"></i>
-          <span>Add by Contacts</span>
+          <i class="fas fa-smile"></i>
+          <span>Emoticons</span>
+          <div class="games"><i class="fas fa-gamepad"></i></div>
+          <span> Games </span>
         </div>
         <div class="icon-row__icon">
-          <i class="fas fa-fingerprint"></i>
-          <span>Add by ID</span>
+          <i class="fas fa-brush"></i>
+          <span>Themes</span>
         </div>
         <div class="icon-row__icon">
-          <i class="far fa-envelope-open"></i>
-          <span>Invite</span>
+          <i class="fas fa-file-invoice-dollar"></i>
+          <span>Account</span>
         </div>
       </div>
-      <div class="recommended-friends">
-        <h6 class="recommended-friends__title">Recommended Friends</h6>
-        <span>You have no recommended friends.</span>
-      </div>
-      <div class="open-chat">
-        <div class="open-chat__header">
-          <h4 class="open-chat__title">Open Chat</h4>
-          <span>
-            Go to Openchat Home<i class="fas fa-chevron-right fa-xs"></i>
-          </span>
-        </div>
-        <div class="open-post">
-          <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
-            <div class="open-post__members">
-              <img
-                src="https://64.media.tumblr.com/a030a3fb628179e6fd537ae3d6dac614/2367b6f520717f6a-28/s640x960/d46d3d66190f292c068f94b0769dee8852510ea7.jpg"
-              />
-              <span class="open-post__member-count">802 members</span>
-              <div class="divider"></div>
-              <span class="open-post__member-status">Active</span>
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">Suggestions</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
             </div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
           </div>
-          <div class="open-post__column">
-            <div class="open-post__photo">
-              <img
-                src="https://64.media.tumblr.com/a030a3fb628179e6fd537ae3d6dac614/2367b6f520717f6a-28/s640x960/d46d3d66190f292c068f94b0769dee8852510ea7.jpg"
-              />
-              <div class="open-post__heart-count">
-                <i class="fas fa-heart fa-xs"></i><span>400</span>
-              </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
             </div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
           </div>
         </div>
       </div>
     </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
