--- a/chats.html
+++ b/chats.html
@@ -37,24 +37,26 @@
     <div class="div"></div>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://lh3.googleusercontent.com/ogw/AOh-ky1QPpl3TwFGxj_jgtlBgWI4ApoTYm8bnfQhdMJT=s32-c-mo"
-            class="user-component__avatar user-component__avata--sm"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">DongHae</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Kakao Account Info
-            </h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://lh3.googleusercontent.com/ogw/AOh-ky1QPpl3TwFGxj_jgtlBgWI4ApoTYm8bnfQhdMJT=s32-c-mo"
+              class="user-component__avatar user-component__avata--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">DongHae</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Kakao Account Info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
