--- a/chat.html
+++ b/chat.html
@@ -38,8 +38,40 @@
     </header>
     <main class="main-screen2 main-chat main-setting">
       <div class="chat__timestamp">Tuseday, June 30, 2022</div>
-    </main>
+      <div class="massage-row">
+        <img
+          src="https://64.media.tumblr.com/a030a3fb628179e6fd537ae3d6dac614/2367b6f520717f6a-28/s640x960/d46d3d66190f292c068f94b0769dee8852510ea7.jpg"
+        />
+        <div class="massage-row__content">
+          <span class="massege__author">Dong Hae</span>
+          <div class="message__info">
+            <span class="masssge__bubble">Hi!</span>
+            <span class="massage__time">21:27</span>
+          </div>
+        </div>
+      </div>
 
+      <div class="massage-row massage-row__own">
+        <div class="massage-row__content">
+          <div class="message__info">
+            <span class="masssge__bubble">Hi! nice to meet you!</span>
+            <span class="massage__time">21:27</span>
+          </div>
+        </div>
+      </div>
+    </main>
+    <form class="reply">
+      <div class="reply__column">
+        <i class="fas fa-plus fa-lg"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="Write a message..." />
+        <i class="far fa-smile fa-lg"></i>
+        <button>
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
+    </form>
     <script
       src="http://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
