--- a/setting.html
+++ b/setting.html
@@ -58,6 +58,10 @@
           </div>
           <div class="settings__setting-column">Latest Version</div>
         </li>
+        <li class="settings__setting__bottom">
+          <i class="fas fa-user-secret fa-lg"></i>
+          <span class="settings__setting__bottom__privacy">Privacy</span>
+        </li>
       </ul>
     </main>
 
