--- a/chat.html
+++ b/chat.html
@@ -43,7 +43,7 @@
           src="https://64.media.tumblr.com/a030a3fb628179e6fd537ae3d6dac614/2367b6f520717f6a-28/s640x960/d46d3d66190f292c068f94b0769dee8852510ea7.jpg"
         />
         <div class="massage-row__content">
-          <span class="massege__author">Dong Hae</span>
+          <span class="massege__author">슈화</span>
           <div class="message__info">
             <span class="masssge__bubble">Hi!</span>
             <span class="massage__time">21:27</span>
@@ -72,6 +72,12 @@
         </button>
       </div>
     </form>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+    <div class="flip">
+      <span>Please filp your phone</span>
+    </div>
     <script
       src="http://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
