--- a/friends.html
+++ b/friends.html
@@ -107,6 +107,12 @@
     <div id="splash-screen">
       <i class="fas fa-comment"></i>
     </div>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+    <div class="flip">
+      <span>Please filp your phone</span>
+    </div>
     <script
       src="http://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
