--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
       <input type="submit" value="Sign Up" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+    <div class="flip">
+      <span>Please filp your phone</span>
+    </div>
     <script
       src="http://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
