--- a/setting.html
+++ b/setting.html
@@ -91,7 +91,12 @@
         </li>
       </ul>
     </nav>
-
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+    <div class="flip">
+      <span>Please filp your phone</span>
+    </div>
     <script
       src="http://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
