--- a/chats.html
+++ b/chats.html
@@ -86,7 +86,7 @@
       </ul>
     </nav>
     <div id="no-mobile">
-      <span>Your screen is super big ㅠㅠ</span>
+      <span>Your screen is too big 🤞 ㅠㅠ</span>
     </div>
     <div class="flip">
       <span>Please filp your phone</span>
