--- a/chats.html
+++ b/chats.html
@@ -92,7 +92,7 @@
       <span>Please filp your phone</span>
     </div>
     <script
-      src="http://kit.fontawesome.com/6478f529f2.js"
+      src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
     ></script>
   </body>
